src/test/deca/syntax/invalid/parser/oracle/if_with_decl.deca
{
    if(int i = 0){
    }
}